[gd_scene load_steps=5 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://AtarianSystem.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0.117647, 0.117647, 0.117647, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 131.0
margin_top = 132.0
margin_right = 381.0
margin_bottom = 380.0
custom_constants/separation = 16

[node name="Button2D" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 50 )
text = "Topdown 2D"

[node name="Button3D" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 250.0
margin_bottom = 116.0
rect_min_size = Vector2( 250, 50 )
disabled = true
text = "Fps 3D"

[node name="Button4D" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 250.0
margin_bottom = 182.0
rect_min_size = Vector2( 250, 50 )
disabled = true
text = "Fps 4D"

[node name="ButtonExit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 250.0
margin_bottom = 248.0
rect_min_size = Vector2( 250, 50 )
text = "Exit"
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button2D" to="." method="_on_Button2D_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button3D" to="." method="_on_Button3D_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button4D" to="." method="_on_Button4D_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonExit" to="." method="_on_ButtonExit_pressed"]
